<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.deftone.bitsandpizzas.fragments.TopFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/main_image"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:scaleType="centerCrop"
            android:src="@drawable/mother_russia" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/top_fragment_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/workout_motherRussia"
                android:textColor="@color/white"
                android:background="#8800838F"
                android:padding="10dp"
                android:textSize="32sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_text"
                android:textColor="@color/white"
                android:background="#8800838F"
                android:padding="10dp"
                android:textSize="16sp"/>
        </LinearLayout>
    </FrameLayout>
</android.support.v4.widget.NestedScrollView>