...
    <string name="app_name">Workout</string>
    <string name="create_order">Create Order</string>
    <string name="action_share">Share</string>

    <string name="title_top">Top fragment</string>
    <string name="home_tab">HOME</string>
    <string name="beine_tab">Beine</string>
    <string name="bauch_tab">Bauch</string>
    <string name="ruecken_tab">Rücken</string>
    <string name="stretching_tab">Dehnen</string>

    <string name="order_name_hint">Please enter your name</string>
    <string name="order_detail_hint">Please enter your order</string>

    <string name="workout_motherRussia">Bikinifigur mit Mother Russia</string>
    <string name="home_text">Such dir ein paar Übungen aus oder lass dir ein Zufallsprogramm zusammen stellen :)
          \n\nHinweise:
          \n1) die Zahl der Wiederholungen sowie Haltezeiten sind nur Vorschläge. Mach soviel wie dir gut tut und dich fordert.
          \n2) am besten wäre es von jeder Übung 2 Sätze zu machen.</string>

    <string name="nav_open_drawer">Open navigation drawer</string>
...
    <string name="statistic_points_4">Punkte (4 Wochen)</string>
    <string name="statistic_points_12">Punkte (12 Wochen)</string>
    <string name="statistic_points_10">Punkte (letze 10)</string>
    <string name="statistic_points_all">Punkte (alle)</string>
    <string name="graph_points_10">Gesamtpunkte der letzten 10 Workouts</string>
    <string name="graph_points_all">Gesamtpunkte aller bisherigen Workouts</string>
    <string name="graph_points_4">Gesamtpunkte der Workouts der letzen 4 Wochen</string>
    <string name="graph_points_12">Gesamtpunkte pro Workouts der letzen 12 Wochen</string>
    <string name="details">Details:</string>
    <string name="nothing_to_show">Bisher keine Punkte gesammelt… los gehts!</string>

    <string name="settings">Einstellungen</string>
    <string name="delete_all_points">alle Punkte löschen</string>
    <string name="delete_points_title">Alle Punkte löschen?</string>
    <string name="delete_points_message">Bist du sicher? Diese Aktion kann nicht rückgängig gemacht werden!</string>

    <string name="share_text">Want to join me working out?</string>

    <string name="points">Wieviele Sätze der Übung hast du erfolgreich beendet?</string>
    <string name="points_alternative">Wieviele Sätze der (einfachen) Übung hast du erfolgreich beendet?</string>
...
